--- a/SandBox/EmailCertify/EmailCertify/Base.lproj/Main.storyboard
+++ b/SandBox/EmailCertify/EmailCertify/Base.lproj/Main.storyboard
@@ -86,6 +86,7 @@
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
+                                    <action selector="okayBtnTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6pR-dm-w3R"/>
                                     <segue destination="P4q-L0-wRb" kind="show" id="BfY-t0-dHu"/>
                                 </connections>
                             </button>
