[WIP] 회원가입 및 이메일 인증

--- a/SandBox/PhoneLogin/PhoneLogin/Base.lproj/Main.storyboard
+++ b/SandBox/PhoneLogin/PhoneLogin/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="2n3-bS-iyj">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
@@ -112,6 +112,7 @@
                                 <connections>
                                     <action selector="btnTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="KTy-Sm-Ltw"/>
                                     <action selector="buttonTapped:" destination="Xbp-pJ-Of1" eventType="touchUpInside" id="0A4-hS-8JQ"/>
+                                    <segue destination="2n3-bS-iyj" kind="show" id="qUR-Ry-kdt"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="x70-Ug-L8d">
@@ -150,6 +151,127 @@
             </objects>
             <point key="canvasLocation" x="820" y="88"/>
         </scene>
+        <!--Sign UpVC-->
+        <scene sceneID="dgz-2G-HvA">
+            <objects>
+                <viewController modalPresentationStyle="fullScreen" id="2n3-bS-iyj" customClass="SignUpVC" customModule="PhoneLogin" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="TSu-kJ-2hd">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="회원정보 입력" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ICh-Yq-cDI">
+                                <rect key="frame" x="0.0" y="126" width="414" height="36"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="22" translatesAutoresizingMaskIntoConstraints="NO" id="d0A-4S-YuB">
+                                <rect key="frame" x="82" y="229" width="250" height="370"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="성별" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0tZ-Q6-0FY">
+                                        <rect key="frame" x="0.0" y="0.0" width="250" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="단과대학" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0F4-NK-oa8">
+                                        <rect key="frame" x="0.0" y="56" width="250" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="학과" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ekE-FP-6EW">
+                                        <rect key="frame" x="0.0" y="112" width="250" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="나이" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SkS-tI-Y8M">
+                                        <rect key="frame" x="0.0" y="168" width="250" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="키" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9ve-lY-zTG">
+                                        <rect key="frame" x="0.0" y="224" width="250" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="MBTI" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ltt-17-dfv">
+                                        <rect key="frame" x="0.0" y="280" width="250" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vP4-e5-L2Z">
+                                        <rect key="frame" x="0.0" y="336" width="250" height="34"/>
+                                        <subviews>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="동국대 웹 메일" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Mic-ve-OOq">
+                                                <rect key="frame" x="0.0" y="0.0" width="163" height="34"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="163" id="dCB-5S-e6A"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="@dgu.ac.kr" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xdg-Dn-djU">
+                                                <rect key="frame" x="163" y="0.0" width="87" height="34"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="250" id="lk7-Cw-cmd"/>
+                                </constraints>
+                            </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="웹 메일 인증 완료후 서비스 이용이 가능합니다." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hE4-vT-Bio">
+                                <rect key="frame" x="96" y="607" width="222" height="14.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" systemColor="systemRedColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q4B-Aj-WoQ">
+                                <rect key="frame" x="82" y="668" width="250" height="36"/>
+                                <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="가입하기"/>
+                                <connections>
+                                    <action selector="signUpButtonTapped:" destination="2n3-bS-iyj" eventType="touchUpInside" id="grd-Ba-m5N"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="nno-vi-r1x"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="ICh-Yq-cDI" firstAttribute="leading" secondItem="nno-vi-r1x" secondAttribute="leading" id="09V-WO-mtj"/>
+                            <constraint firstItem="nno-vi-r1x" firstAttribute="trailing" secondItem="d0A-4S-YuB" secondAttribute="trailing" constant="82" id="83v-vb-FbZ"/>
+                            <constraint firstItem="d0A-4S-YuB" firstAttribute="leading" secondItem="nno-vi-r1x" secondAttribute="leading" constant="82" id="Bse-YE-BGw"/>
+                            <constraint firstItem="q4B-Aj-WoQ" firstAttribute="leading" secondItem="nno-vi-r1x" secondAttribute="leading" constant="82" id="C7z-tP-zai"/>
+                            <constraint firstItem="d0A-4S-YuB" firstAttribute="top" secondItem="ICh-Yq-cDI" secondAttribute="bottom" constant="67" id="KdC-TN-wR3"/>
+                            <constraint firstItem="nno-vi-r1x" firstAttribute="trailing" secondItem="ICh-Yq-cDI" secondAttribute="trailing" id="V7G-dW-YxK"/>
+                            <constraint firstItem="hE4-vT-Bio" firstAttribute="top" secondItem="d0A-4S-YuB" secondAttribute="bottom" constant="8" symbolic="YES" id="XTx-tA-mcO"/>
+                            <constraint firstItem="hE4-vT-Bio" firstAttribute="leading" secondItem="nno-vi-r1x" secondAttribute="leading" constant="96" id="ZK9-7d-3nl"/>
+                            <constraint firstItem="nno-vi-r1x" firstAttribute="trailing" secondItem="hE4-vT-Bio" secondAttribute="trailing" constant="96" id="dEz-zA-Qt2"/>
+                            <constraint firstItem="nno-vi-r1x" firstAttribute="trailing" secondItem="q4B-Aj-WoQ" secondAttribute="trailing" constant="82" id="mNp-wf-e9R"/>
+                            <constraint firstItem="ICh-Yq-cDI" firstAttribute="top" secondItem="nno-vi-r1x" secondAttribute="top" constant="82" id="nl0-Yc-4wq"/>
+                            <constraint firstItem="q4B-Aj-WoQ" firstAttribute="top" secondItem="hE4-vT-Bio" secondAttribute="bottom" constant="46.5" id="uVJ-s2-KHs"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="S78-0z-a0P"/>
+                    <connections>
+                        <outlet property="MBTI" destination="ltt-17-dfv" id="7g3-iC-MUM"/>
+                        <outlet property="age" destination="SkS-tI-Y8M" id="woF-ZF-KCh"/>
+                        <outlet property="college" destination="0F4-NK-oa8" id="ojl-oU-x4w"/>
+                        <outlet property="height" destination="9ve-lY-zTG" id="heN-cj-hV0"/>
+                        <outlet property="mail" destination="Mic-ve-OOq" id="Z2R-HG-rWo"/>
+                        <outlet property="major" destination="ekE-FP-6EW" id="Tsw-ly-0qg"/>
+                        <outlet property="sex" destination="0tZ-Q6-0FY" id="3js-1G-CLU"/>
+                        <outlet property="signUpButton" destination="q4B-Aj-WoQ" id="7l6-pS-ZOY"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZOb-s3-RAX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1740.5797101449277" y="87.723214285714278"/>
+        </scene>
     </scenes>
     <resources>
         <systemColor name="opaqueSeparatorColor">
@@ -157,6 +279,9 @@
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
