--- a/api-server/demo/src/main/resources/templates/index.html
+++ b/api-server/demo/src/main/resources/templates/index.html
@@ -25,9 +25,9 @@
 		<div class="bio">
 			<p>동국대학교 학생들을 위한 <br><br>
 				그리고 <br><br>
-				<a href="#">홍화형</a>, <a href="#">한종호</a>, <a href="#">임정우</a>, <a href="#">최재원</a> 의 <br>
-				성공적인 취직을 위한<br><br> <a href="#">KOTING</a> - 미팅 어플리케이션
-				<br><br> <a href="#">2021년 4월 15일</a> 출시됩니다.⠀⠀⠀⠀⠀⠀
+				<a href="https://github.com/honghwahyeong">홍화형</a>, <a href="https://github.com/hanjongho">한종호</a>, <a href="https://github.com/imjeongwoo">임정우</a>, <a href="https://github.com/chlwodnjs">최재원</a> 의 <br>
+				성공적인 취직을 위한<br><br> KOTING - 미팅 어플리케이션
+				<br><br> 2021년 4월 15일 출시됩니다.⠀⠀⠀⠀⠀⠀
 				⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
 			</p>
 		</div>
