--- a/api-server/demo/src/main/resources/templates/index.html
+++ b/api-server/demo/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
 	<link rel="icon" type="image/png" href="../static/images/favicon.png" sizes="32x32">
 
 	<!-- Styles -->
-	<link rel='stylesheet' href='../static/assets/css/me.css' type='text/css' media='screen' />
+	<link rel='stylesheet' href='../static/css/me.css' type='text/css' media='screen' />
 	<meta name="viewport" content="width=device-width,initial-scale=1" />
 
 </head>
